--- a/src/pages/Main/List/BrowserList.css
+++ b/src/pages/Main/List/BrowserList.css
@@ -3,8 +3,15 @@
 }
 
 /* Check.js */
+.check{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .check-cate{
-  display:inline-block;
+  width: 100px;
+  position: relative;
 }
 
 .check-cate input[type="checkbox"]{
@@ -13,23 +20,34 @@
 
 .check-cate input[type="checkbox"] + label{
   display:inline-block;
-  width: 60px;
+  width: 80px;
   height: 25px;
-  margin: 10px 1.5vw;
+  margin: 10px;
   text-align: center;
   line-height: 25px;
-  box-shadow: 0 0 0 3px #999999;
+  box-shadow: 0 0 0 2px #ffe8b6;
   border-radius: 100px;
 }
 
 .check-cate input[type="checkbox"]:checked + label{
   display:inline-block;
-  width: 60px;
+  width: 80px;
   height: 25px;
-  margin: 10px 1.5vw;
+  margin: 10px;
   text-align: center;
   line-height: 25px;
-  background-color: #ffdee2;
-  box-shadow: 0 0 0 3px #e96c7c;
+  background-color: #FED06E;
+  box-shadow: 0 0 0 2px #FED06E;
   border-radius: 100px;
+}
+
+.keyword{
+  position: absolute;
+  left: 20px;
+}
+
+.plu-miu{
+  position: absolute;
+  right: 20px;
+  line-height: 20px;
 }
