--- a/src/pages/Header/Header.css
+++ b/src/pages/Header/Header.css
@@ -1,42 +1,31 @@
 .header{
-  height:80px;
-  background-color: #FED06E;
+	position: fixed;
+	top:0px;
+	left: 0px;
+	width: 100vw;
+  height:60px;
   display: flex;
+	z-index: 999;
+	background-color: white;
 }
 
 .logo{
-  height: 70px;
+  height: 50px;
   margin: 5px 15px;
 }
 
 .title{
   font-size: 40px;
   font-weight: 1000;
-  line-height: 80px;
+	color: #FED06E;
+	text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+  line-height: 60px;
 }
 
-.login{
-  position:absolute;
-  right: 20px;
-  text-decoration-line: none;
-  color: rgb(97, 97, 97);
-  margin: 10px;
-}
-
-.logout{
+.mypage{
   position:absolute;
   right: 20px;
   margin: 10px;
-}
-
-.logout-btn{
-  border: 0;
-  outline: 0;
-  background-color: inherit;
-  color: rgb(97, 97, 97);
-  font-weight: 750;
-}
-
-.nickname{
-  font-size: 20px;
+  height: 30px;
+  margin: 15px 15px;
 }
