--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,9 +1,3 @@
-.login-page{
-  width: 100vw;
-  height: 100vh;
-  background-color: #FED06E;
-}
-
 .logo-content{
   width: 300px;
   height: 400px;
@@ -51,4 +45,18 @@
   left: 50px;
   bottom: 20px;
   width: 195px;
+}
+
+.goto-main{
+  width: 150px;
+  padding: 10px;
+  text-align: center;
+  position:absolute;
+  top:600px;
+  left:50vw;
+  margin-left:-75px;
+	background-color: #ffe6af;
+  border: gray;
+	border-radius: 10px;
+	box-shadow: 0 10px 10px -5px rgb(68, 68, 68);
 }
