--- a/src/pages/Main/List/BrowserList.css
+++ b/src/pages/Main/List/BrowserList.css
@@ -1,5 +1,13 @@
-.list{
+.browser-list{
+	position:fixed;
+	left: 20px;
+	top: 75px;
   width: 350px;
+	height: 86.5vh;
+	background-color: white;
+	border-radius: 15px;
+	box-shadow: 5px 5px 10px #949494;
+	z-index: 999;
 }
 
 /* Check.js */
