Feat: 서버 배포 후 연결

--- a/src/pages/Main/List/BrowserList.css
+++ b/src/pages/Main/List/BrowserList.css
@@ -10,6 +10,41 @@
 	z-index: 999;
 }
 
+/* 두개 버튼 */
+.browser-select-content{
+  display : flex;
+  justify-content:space-around;
+  flex-wrap: wrap;
+  height: 70px;
+  line-height: 50px;
+  margin: 0;
+}
+
+.browser-select-word{
+  width: 150px;
+  height: 10px;
+  text-align: center;
+  cursor: pointer;;
+}
+
+.browser-select-word.cate{
+  color:#949494;
+}
+
+.browser-select{
+  width: 140px;
+  height: 5px;
+  border-radius: 5px;
+}
+
+.browser-select.cate{
+  background-color: rgb(255, 255, 255);
+}
+
+.browser-select.chatbot{
+  background-color: #FED06E;
+}
+
 /* Check.js */
 .check{
   display: flex;
