--- a/src/pages/MyPage/BrowserMyPage.css
+++ b/src/pages/MyPage/BrowserMyPage.css
@@ -91,11 +91,8 @@
   width: 100px;
   padding: 10px;
   text-align: center;
-  position:absolute;
-  top:600px;
-  left:50vw;
-  margin-left:-50px;
-	background-color: #ffe6af;
+  margin: 20px;
+	background-color: #ffe3a7;
   border: gray;
 	border-radius: 10px;
 	box-shadow: 5px 5px 10px #949494;
@@ -106,10 +103,11 @@
   text-align: center;
   position:absolute;
   top:660px;
-  left:50vw;
+  left:50%;
   margin-left:-50px;
-	background-color: #ffe6af;
-  border: gray;
-	border-radius: 10px;
-	box-shadow: 5px 5px 10px #949494;
+  color: #414141;
+  border: none;
+  background-color: inherit;
+  text-decoration: underline;
+  font-weight: 1000;
 }
