--- a/src/pages/Auth/BrowserAuth.css
+++ b/src/pages/Auth/BrowserAuth.css
@@ -1,4 +1,10 @@
-.auth-content{
+.auth{
+  background-color:#FED06E;
+  height: 100vh;
+  overflow:hidden !important;
+}
+
+.auth-content-first{
   width: 300px;
   height: 500px;
   background-color: #ffe09d;
@@ -8,13 +14,18 @@
   left:50%;
   margin:-200px 0 0 -150px;
   box-shadow: 0 10px 10px -5px rgb(68, 68, 68);
+  z-index: 2;
+}
+
+.auth-content-first.success{
+  transition: 1s;
+  top: -330px;
 }
 
 .auth-title{
   position: absolute;
   left: 35px;
   top: 20px;
-  width: 100px;
   color:#414141;
   text-align: left;
   line-height: 11px;
@@ -26,7 +37,7 @@
   color: #414141;
   box-sizing: border-box;
   top: 100px;
-  width : 440px;
+  width : 300px;
 }
 
 
@@ -51,7 +62,7 @@
   border-left: 2px solid #414141;
 }
 .text_bar.fail {
-  border-left: 1px solid #FF0000;
+  border-left: 2px solid #FF0000;
 }
 .textinput {
   border:none;
@@ -107,4 +118,66 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   color : #FF0000;
   border: 2px solid #FF0000;
   background: #FFFFFF;
+}
+
+.auth-content-second{
+  width: 300px;
+  height: 500px;
+  background-color: #ffe09d;
+  border-radius: 25px;
+  position:absolute;
+  top:330px;
+  left:50vw;
+  margin:-200px 0 0 -150px;
+  box-shadow: 0 10px 10px -5px rgb(68, 68, 68);
+  display: none;
+  z-index: 1;
+}
+.auth-content-second.success{
+  transition: all 1s;
+  display: block;
+}
+
+/* 라디오 버튼 */
+.auth-check-sex {
+  position: relative;
+  margin: 10px 30px;
+  display: flex;
+}
+.auth-check-sex input[type="radio"]{
+  display: none;
+}
+
+.auth-check-sex input[type="radio"] + label[for="man"]{
+  display:inline-block;
+  width: 50px;
+  height: 25px;
+  color:#919191;
+  text-align: center;
+  line-height: 25px;
+  box-shadow: 0 0 0 2px #ffffff;
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+  cursor: pointer;
+}
+.auth-check-sex input[type="radio"] + label[for="woman"]{
+  display:inline-block;
+  width: 50px;
+  height: 25px;
+  color:#919191;
+  text-align: center;
+  line-height: 25px;
+  box-shadow: 0 0 0 2px #ffffff;
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
+  cursor: pointer;
+}
+.auth-check-sex input[type="radio"]:checked + label{
+  display:inline-block;
+  width: 50px;
+  height: 25px;
+  color:#414141;
+  text-align: center;
+  line-height: 25px;
+  background-color: #FED06E;
 }
