--- a/src/pages/Auth/MobileAuth.css
+++ b/src/pages/Auth/MobileAuth.css
@@ -1,4 +1,10 @@
-.login-content{
+.auth{
+  background-color:#FED06E;
+  height: 100vh;
+  overflow:hidden !important;
+}
+
+.auth-content-first{
   width: 300px;
   height: 500px;
   background-color: #ffe09d;
@@ -8,52 +14,38 @@
   left:50%;
   margin:-200px 0 0 -150px;
   box-shadow: 0 10px 10px -5px rgb(68, 68, 68);
+  z-index: 2;
 }
 
-.login-logo{
-  margin:0px 90px;
-  padding: 20px 0;
-  height: 180px;
-
-  animation-name: logo;
-  animation-duration: 0.7s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
+.auth-content-first.success{
+  transition: 1s;
+  top: -330px;
 }
 
-@keyframes logo {
-  from {
-    padding-top: 15px;
-  }
-  60% {
-    padding-top: 25px
-  }
-  to {
-    padding-top: 30px;
-  }
+.auth-title{
+  position: absolute;
+  left: 35px;
+  top: 20px;
+  color:#414141;
+  text-align: left;
+  line-height: 11px;
 }
 
-.login-title{
-  margin:10px 20px 20px 40px;
-}
-
-
-/*로그인*/
-.login_warp {
+/*회원가입*/
+.auth_warp {
   position: absolute;
   color: #414141;
   box-sizing: border-box;
-  top: 200px;
-  width : 440px;
+  top: 100px;
+  width : 300px;
 }
 
 
-/*login_content*/
-.login_items{
-  height:75px;
+/*auth_content*/
+.auth_items{
+  height:85px;
 }
-.login_text{
+.auth_text{
   line-height: 14px;
   font-family: 'Noto Sans KR';
   font-style: normal;
@@ -70,7 +62,7 @@
   border-left: 2px solid #414141;
 }
 .text_bar.fail {
-  border-left: 1px solid #FF0000;
+  border-left: 2px solid #FF0000;
 }
 .textinput {
   border:none;
@@ -80,7 +72,7 @@
   font-size: 14px;
   margin: 12px 16px;
 }
-.login_content {
+.auth_content {
   float:left;
   width: 240px;
   height: 40px;
@@ -90,7 +82,7 @@
   border-radius: 10px;
   color:#414141;
 }
-.login_content.fail {
+.auth_content.fail {
   color : #FF0000;
   border: 2px solid #FF0000;
 }
@@ -100,51 +92,48 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   -webkit-appearance: none;
 }
 
-.login_btn{
+.subtitle{
   position:absolute;
-  left: 55px;
-  bottom: -40px;
-  width: 180px;
-  height: 35px;
+  bottom: 80px;
+  margin:10px 20px 0 50px;
+}
+
+.start_btn{
+  position:absolute;
+  left: 50px;
+  bottom: 20px;
+  width: 195px;
+  height: 40px;
   background: #FFFFFF;
   border-radius: 6px;
   font-family: 'Noto Sans KR';
   font-style: normal;
   font-weight: 900;
-  font-size: 15px;
+  font-size: 20px;
   line-height: 29px;
   color: #414141;
   cursor: pointer;
 }
-.login_btn.fail {
+.start_btn.fail {
   color : #FF0000;
   border: 2px solid #FF0000;
   background: #FFFFFF;
 }
 
-.goto{
+.auth-content-second{
   width: 300px;
-  text-align: center;
+  height: 500px;
+  background-color: #ffe09d;
+  border-radius: 25px;
   position:absolute;
-  top:630px;
-  left:50%;
-  margin-left:-150px;
+  top:330px;
+  left:50vw;
+  margin:-200px 0 0 -150px;
+  box-shadow: 0 10px 10px -5px rgb(68, 68, 68);
+  display: none;
+  z-index: 1;
 }
-.goto-auth{
-  margin: 20px;
-  font-weight: 1000;
-  color: #414141;
-  border: none;
-  background-color: inherit;
-  text-decoration: underline;
-}
-
-
-.goto-main{
-  margin: 0 20px;
-  font-weight: 1000;
-  color: #414141;
-  border: none;
-  background-color: inherit;
-  text-decoration: underline;
+.auth-content-second.success{
+  transition: all 1s;
+  display: block;
 }
