--- a/src/pages/Main/List/MobileList.css
+++ b/src/pages/Main/List/MobileList.css
@@ -1,4 +1,49 @@
 .mobile-list{
-	margin-top: 60px;
-  width: 100vw;
+	position:fixed;
+	left: 20px;
+	top: 75px;
+  width: 350px;
+  height: 550px;
+	/* height: 86.5vh; */
+	background-color: white;
+  border: 1px solid #949494;
+	border-radius: 15px;
+	box-shadow: 5px 5px 10px #949494;
+	z-index: 999;
 }
+
+/* 두개 버튼 */
+.mobile-select-content{
+  display : flex;
+  justify-content:space-around;
+  flex-wrap: wrap;
+  height: 70px;
+  line-height: 50px;
+  margin: 0;
+}
+
+.mobile-select-word{
+  width: 150px;
+  height: 10px;
+  text-align: center;
+  cursor: pointer;;
+}
+
+.mobile-select-word.cate{
+  color:#949494;
+}
+
+.mobile-select{
+  width: 140px;
+  height: 5px;
+  border-radius: 5px;
+}
+
+.mobile-select.cate{
+  background-color: rgb(255, 255, 255);
+}
+
+.mobile-select.chatbot{
+  background-color: #FED06E;
+}
+
