--- a/src/pages/Login/MobileLogin.css
+++ b/src/pages/Login/MobileLogin.css
@@ -1,9 +1,14 @@
+.mobile-login{
+  background-color:#FED06E;
+  height: 100vh;
+}
+
 .mobile-login-content{
+	position:fixed;
   width: 300px;
   height: 500px;
   background-color: #ffe09d;
   border-radius: 25px;
-  position:absolute;
   top:300px;
   left:50vw;
   margin:-200px 0 0 -150px;
@@ -126,7 +131,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 .goto{
   width: 300px;
   text-align: center;
-  position:absolute;
+  position:fixed;
   top:600px;
   left:50%;
   margin-left:-150px;
