--- a/src/pages/Main/List/BrowserList.css
+++ b/src/pages/Main/List/BrowserList.css
@@ -16,8 +16,9 @@
   display : flex;
   justify-content:space-around;
   flex-wrap: wrap;
-  height: 70px;
-  line-height: 50px;
+  align-items: center;
+  height: 60px;
+  line-height: 30px;
   margin: 0;
 }
 
@@ -25,7 +26,7 @@
   width: 150px;
   height: 10px;
   text-align: center;
-  cursor: pointer;;
+  cursor: pointer;
 }
 
 .browser-select-word.cate{
@@ -49,7 +50,7 @@
 .browser-store-list {
   margin-top: 10px;
   width: 350px;
-  height: 490px;
+  height: 431px;
   overflow-x: hidden;
 }
 .browser-store-list::-webkit-scrollbar {
@@ -68,6 +69,24 @@
 
 /* 모달 */
 .modal{
-  padding:0 20px;
+  margin: 0 10px 10px 10px;
+  padding: 5px;
   cursor: pointer;
+  border: 2px #949494 solid;
+  border-radius: 10px;
+}
+
+.modal-area-img{
+  width: 17px;
+  margin-right: 5px;
+}
+
+.modal-type-img{
+  width: 17px;
+  height: 18px;
+  margin-right: 5px;
+}
+
+.modal-content{
+  
 }
