--- a/src/pages/Main/List/SelectModal/SelectModal.css
+++ b/src/pages/Main/List/SelectModal/SelectModal.css
@@ -1,3 +1,10 @@
+.modal-sub-title{
+  margin: 0 10px;
+  display: flex;
+  justify-content: space-between;
+}
+
+
 /* 지역 */
 .area-img{
   width:280px;
@@ -90,9 +97,6 @@
 
 
 
-
-
-
 /* 음식 타입 */
 .type{
   display: flex;
@@ -146,6 +150,39 @@
   right: 20px;
   line-height: 20px;
 }
+
+/* 모두 선택 */
+.modal-sub-title button{
+  border: none;
+  padding: 0;
+  font-family: 'SUITE-Regular';
+}
+
+.all-check{
+  display:inline-block;
+  width: 12px;
+  height: 12px;
+  text-align: center;
+  line-height: 0px;
+  box-shadow: 0 0 0 2px #ffe8b6;
+  border-radius: 2px;
+  cursor: pointer;
+  color: #eeeeee;
+}
+
+.ok{
+  display:inline-block;
+  content: "\2713";
+  width: 12px;
+  height: 12px;
+  text-align: center;
+  line-height: 0px;
+  background-color: #FED06E;
+  box-shadow: 0 0 0 2px #FED06E;
+  border-radius: 2px;
+  color: #2f2f2f;
+}
+
 
 /* 확정하기 버튼 */
 .ok-button{
