--- a/src/pages/Main/List/Store/ChatStore.css
+++ b/src/pages/Main/List/Store/ChatStore.css
@@ -1,5 +1,5 @@
 .store{
-  padding: 15px 20px 0 20px;
+  padding: 15px 20px;
   border-top: 1px solid #c2c2c2;
   position: relative;
 }
@@ -71,7 +71,6 @@
   color:#414141;
   display: flex;
   justify-content: space-between;
-  font-size: 13px;
 }
 
 .store-review{
@@ -81,9 +80,11 @@
   margin-top: 3px;
 }
 
-.store-like{
+.store-chat-like{
+  position: absolute;
+  top: 65px;
+  right: 20px;
   height: 25px;
-  margin-bottom: 5px;
   cursor: pointer;
 }
 
@@ -91,5 +92,5 @@
   font-weight: 400;
   color:#414141;
   font-size: 13px;
-  padding-bottom: 10px;
+  padding: 10px 0;
 }
