--- a/src/pages/MyPage/BrowserMyPage.css
+++ b/src/pages/MyPage/BrowserMyPage.css
@@ -1,14 +1,19 @@
 .browser-mypage{
-  width: 320px;
-  height: 140px;
   display: flex;
+  width: 70vw;
+  height: 500px;
   position:absolute;
-  top:100px;
-  left:50%;
-  margin-left:-150px;
+  top: 150px;
+  left: 15vw;
+  background-color: rgb(255, 255, 255);
 }
 
-.logout-logo{
+.mypage-info{
+  margin: 10px 20px;
+  width: 282px;
+}
+
+.mypage-rabbit-logo{
   height: 150px;
 
   animation-name: logo;
@@ -33,81 +38,43 @@
 .mypage-content{
   padding: 50px 10px;
 }
-
-/* select-area */
-.select-area-content{
-  width: 500px;
-  padding: 10px;
-  text-align: center;
-  position:absolute;
-  top:300px;
-  left:50vw;
-  margin-left:-250px;
-	background-color: white;
-	border-radius: 15px;
-	box-shadow: 5px 5px 10px #949494;
-}
-
-.select-area{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-
-.check-area{
-  width: 100px;
-  position: relative;
-}
-
-.check-area input[type="checkbox"]{
-  display: none;
-}
-
-.check-area input[type="checkbox"] + label{
-  display:inline-block;
-  width: 80px;
-  height: 25px;
-  margin: 10px;
-  text-align: center;
-  line-height: 25px;
-  box-shadow: 0 0 0 2px #ffe8b6;
-  border-radius: 100px;
-}
-
-.check-area input[type="checkbox"]:checked + label{
-  display:inline-block;
-  width: 80px;
-  height: 25px;
-  margin: 10px;
-  text-align: center;
-  line-height: 25px;
-  background-color: #FED06E;
-  box-shadow: 0 0 0 2px #FED06E;
-  border-radius: 100px;
-}
-
-/* btn */
-.submit-btn {
-  width: 100px;
-  padding: 10px;
-  text-align: center;
-  margin: 20px;
-	background-color: #ffe3a7;
-  border: gray;
-	border-radius: 10px;
-	box-shadow: 5px 5px 10px #949494;
+.mypage-myinfo{
+  margin: 10px 40px;
 }
 .logout-btn{
   width: 100px;
   padding: 10px;
   text-align: center;
-  position:absolute;
-  top:660px;
-  left:50%;
-  margin-left:-50px;
   color: #414141;
   border: none;
   background-color: inherit;
   text-decoration: underline;
   font-weight: 1000;
+  margin: 90px;
+}
+
+/* 로그 */
+.mypage-log{
+  display: flex;
+  flex-wrap: wrap;
+  margin: 30px 0;
+}
+/* 클릭한 식당 */
+.mypage-click-log{
+  width: 300px;
+  margin: 0 50px;
+}
+.mypage-log-list{
+  width: 280px;
+	height: 200px;
+	background-color: white;
+  border: 1px solid #949494;
+	border-radius: 15px;
+	box-shadow: 1px 1px 3px #949494;
+	margin-top: 10px;
+}
+
+/* 좋아요한 식당 */
+.mypage-like-log{
+  width: 300px;
 }
