--- a/src/pages/MyPage/BrowserMyPage.css
+++ b/src/pages/MyPage/BrowserMyPage.css
@@ -71,7 +71,7 @@
   border: 1px solid #949494;
 	border-radius: 15px;
 	box-shadow: 1px 1px 3px #949494;
-	margin-top: 10px;
+	margin: 10px 0;
 }
 
 /* 좋아요한 식당 */
