--- a/src/pages/Main/List/Store/CheckStore.css
+++ b/src/pages/Main/List/Store/CheckStore.css
@@ -1,5 +1,5 @@
 .store{
-  padding: 15px 20px;
+  padding: 15px 50px 15px 20px;
   border-top: 1px solid #c2c2c2;
   position: relative;
 }
@@ -62,6 +62,9 @@
   font-size: 14px;
   font-weight: 400;
   color:#414141;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .store-last{
