--- a/src/pages/Main/List/BrowserList.css
+++ b/src/pages/Main/List/BrowserList.css
@@ -69,5 +69,20 @@
 
 /* 로그인 안 했을 때 */
 .please-login{
-  margin: 30%;
+  width: 350px;
+  text-align: center;
+}
+.please-img{
+  opacity: 0.5;
+  width: 130px;
+  margin-bottom: 20px;
+  position:absolute;
+  top: 100px;
+  left: 110px;
+}
+.lock-img{
+  width: 80px;
+  position:absolute;
+  top: 150px;
+  left: 132px;
 }
