Design: 디테일 페이지

--- a/src/pages/Detail/BrowserDetail.css
+++ b/src/pages/Detail/BrowserDetail.css
@@ -10,15 +10,35 @@
   border-top: 5px #FED06E solid;
 }
 
+.store-info-subtitle{
+  background-color:#e1e1e1;
+  font-size: 12px;
+  border-radius: 10px;
+  padding: 0 5px;
+}
+
 /* 두번째 구역(사진, 지도) */
 .store-detail-second{
   display:flex;
-  margin-top: 10px;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+  justify-content:space-between;
+}
+
+.store-detail-info-second{
+  margin-top: 20px;
+  white-space: pre-line;
+  padding: 20px;
+  text-align: left;
+  width: 350px;
+	height: 275px;
+	background-color: white;
+  border: 1px solid #949494;
+	border-radius: 15px;
+	box-shadow: 1px 1px 3px #949494;
 }
 
 .store-detail-img{
-  width: 300px;
+  width: 350px;
+  height: 233px;
 }
 
 
@@ -35,10 +55,11 @@
   cursor: pointer;
 }
 
-/* 세번째 구역(정보, 리뷰) */
+/* 세번째 구역(리뷰, 추천 식당) */
 .store-detail-third{
   display: flex;
   justify-content:space-between;
+  margin-bottom: 30px;
 }
 
 .store-detail-info{
@@ -47,11 +68,28 @@
   padding: 20px;
   text-align: left;
   width: 350px;
-	height: 200px;
+	height: 500px;
 	background-color: white;
   border: 1px solid #949494;
 	border-radius: 15px;
 	box-shadow: 1px 1px 3px #949494;
+}
+.store-info-review{
+  height: 460px;
+  overflow-x: hidden;
+}
+.store-info-review::-webkit-scrollbar {
+  width: 8px;
+}
+
+.store-info-review::-webkit-scrollbar-thumb {
+  height: 30%;
+  background: rgba(92, 92, 92, 0.4);
+  border-radius: 10px;
+}
+
+.store-info-review::-webkit-scrollbar-track {
+  background: rgba(92, 92, 92, 0.1);  /*스크롤바 뒷 배경 색상*/
 }
 
 .store-info-title{
