--- a/src/pages/MyPage/BrowserMyPage.css
+++ b/src/pages/MyPage/BrowserMyPage.css
@@ -6,6 +6,8 @@
   top: 150px;
   left: 15vw;
   background-color: rgb(255, 255, 255);
+  border-radius: 25px;
+  box-shadow: 0px -5px 20px #454545;
 }
 
 .mypage-info{
