--- a/src/pages/Main/List/Store/ChatStore.css
+++ b/src/pages/Main/List/Store/ChatStore.css
@@ -1,12 +1,13 @@
-.store{
+.chat-store{
   padding: 15px 50px 15px 20px;
   border-top: 1px solid #c2c2c2;
   position: relative;
+  height: 76px;
 }
-.store:hover{
+.chat-store:hover{
   background-color: #f5f5f5;
 }
-.store.click{
+.chat-store.click{
   background-color: #f5f5f5;
 }
 
