--- a/src/pages/Main/List/Store/CheckStore.css
+++ b/src/pages/Main/List/Store/CheckStore.css
@@ -2,6 +2,7 @@
   padding: 15px 50px 15px 20px;
   border-top: 1px solid #c2c2c2;
   position: relative;
+  height: 57px;
 }
 .store:hover{
   background-color: #f5f5f5;
