--- a/src/pages/MyPage/BrowserMyPage.css
+++ b/src/pages/MyPage/BrowserMyPage.css
@@ -1,18 +1,18 @@
 .browser-mypage{
   display: flex;
-  width: 70vw;
+  width: 60vw;
   height: 500px;
   position:absolute;
   top: 150px;
-  left: 15vw;
+  left: 20vw;
   background-color: rgb(255, 255, 255);
   border-radius: 25px;
-  box-shadow: 0px -5px 20px #454545;
+  /* box-shadow: 0px -5px 20px #454545; */
 }
 
 .mypage-info{
-  margin: 10px 20px;
-  width: 282px;
+  margin: 10px 50px;
+  width: 300px;
 }
 
 .mypage-rabbit-logo{
@@ -67,13 +67,30 @@
   margin: 0 50px;
 }
 .mypage-log-list{
-  width: 280px;
-	height: 200px;
+  width: 350px;
+	height: 450px;
+  padding: 10px;
 	background-color: white;
   border: 1px solid #949494;
 	border-radius: 15px;
 	box-shadow: 1px 1px 3px #949494;
 	margin: 10px 0;
+  overflow-x: hidden;
+}
+
+.mypage-log-list::-webkit-scrollbar {
+  width: 8px;
+  margin-right: 10px;
+}
+
+.mypage-log-list::-webkit-scrollbar-thumb {
+  height: 30%;
+  background-color: #bbbbbb;
+  border-radius: 10px;
+}
+
+.mypage-log-list::-webkit-scrollbar-track {
+  background: rgba(92, 92, 92, 0.1); 
 }
 
 /* 좋아요한 식당 */
