--- a/src/pages/Detail/BrowserDetail.css
+++ b/src/pages/Detail/BrowserDetail.css
@@ -102,3 +102,17 @@
   border-bottom: 2px rgb(112, 112, 112) solid;
   margin: 10px  0;
 }
+.store-similar:hover{
+  background-color: #f5f5f5;
+}
+.store-similar-img{
+  width: 150px;
+  height: 100.275px;
+  border-radius: 5px;
+}
+.store-similar-content{
+  padding: 20px 5px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
