--- a/src/pages/Main/List/Chat/Chat.css
+++ b/src/pages/Main/List/Chat/Chat.css
@@ -1,7 +1,7 @@
 .browser-store-list {
-  margin-top: 10px;
+  margin: 0;
   width: 350px;
-  height: 431px;
+  height: 405px;
   overflow-x: hidden;
 }
 .browser-store-list::-webkit-scrollbar {
