--- a/src/pages/Detail/Detail.css
+++ b/src/pages/Detail/Detail.css
@@ -1,53 +1,52 @@
-.browser-detail{
-  width:810px;
-  margin:auto;
+.detail {
+  width: 810px;
+  margin: auto;
   margin-top: 70px;
   text-align: center;
 }
 
-.store-detail-title{
+.store-detail-title {
   font-size: 40px;
-  border-top: 5px #FED06E solid;
+  border-top: 5px #fed06e solid;
 }
 
-.store-detail-like{
+.store-detail-like {
   width: 25px;
   cursor: pointer;
 }
 
-.store-info-subtitle{
-  background-color:#e1e1e1;
+.store-info-subtitle {
+  background-color: #e1e1e1;
   font-size: 12px;
   border-radius: 10px;
   padding: 0 5px;
 }
 
 /* 두번째 구역(사진, 지도) */
-.store-detail-second{
-  display:flex;
-  justify-content:space-between;
+.store-detail-second {
+  display: flex;
+  justify-content: space-between;
 }
 
-.store-detail-info-second{
+.store-detail-info-second {
   margin-top: 20px;
   white-space: pre-line;
   padding: 20px;
   text-align: left;
   width: 350px;
-	height: 275px;
-	background-color: white;
+  height: 275px;
+  background-color: white;
   border: 1px solid #949494;
-	border-radius: 15px;
-	box-shadow: 1px 1px 3px #949494;
+  border-radius: 15px;
+  box-shadow: 1px 1px 3px #949494;
 }
 
-.store-detail-img{
+.store-detail-img {
   width: 350px;
   height: 233px;
 }
 
-
-.store-detail-tag{
+.store-detail-tag {
   border-radius: 10%;
   font-weight: 700;
   font-size: 9px;
@@ -61,26 +60,26 @@
 }
 
 /* 세번째 구역(리뷰, 추천 식당) */
-.store-detail-third{
+.store-detail-third {
   display: flex;
-  justify-content:space-between;
+  justify-content: space-between;
   margin-bottom: 30px;
 }
 
-.store-detail-info{
+.store-detail-info {
   margin-top: 25px;
   white-space: pre-line;
   padding: 20px;
   text-align: left;
   width: 350px;
-	height: 500px;
-	background-color: white;
+  height: 500px;
+  background-color: white;
   border: 1px solid #949494;
-	border-radius: 15px;
-	box-shadow: 1px 1px 3px #949494;
+  border-radius: 15px;
+  box-shadow: 1px 1px 3px #949494;
 }
 
-.store-info-review{
+.store-info-review {
   height: 460px;
   overflow-x: hidden;
 }
@@ -95,27 +94,27 @@
 }
 
 .store-info-review::-webkit-scrollbar-track {
-  background: rgba(92, 92, 92, 0.1);  /*스크롤바 뒷 배경 색상*/
+  background: rgba(92, 92, 92, 0.1); /*스크롤바 뒷 배경 색상*/
 }
 
-.store-detail-user-img{
+.store-detail-user-img {
   width: 50px;
 }
 
-.store-info-title{
+.store-info-title {
   font-size: 18px;
   border-bottom: 2px rgb(112, 112, 112) solid;
-  margin: 10px  0;
+  margin: 10px 0;
 }
-.store-similar:hover{
+.store-similar:hover {
   background-color: #f5f5f5;
 }
-.store-similar-img{
+.store-similar-img {
   width: 150px;
   height: 100.275px;
   border-radius: 5px;
 }
-.store-similar-content{
+.store-similar-content {
   padding: 20px 5px;
   overflow: hidden;
   text-overflow: ellipsis;
