--- a/src/pages/Main/List/List.css
+++ b/src/pages/Main/List/List.css
@@ -1,46 +1,46 @@
-.browser-list{
-	position:fixed;
-	left: 20px;
-	top: 75px;
+.list {
+  position: fixed;
+  left: 20px;
+  top: 75px;
   width: 350px;
-	height: 86.5vh;
-	background-color: white;
+  height: 86.5vh;
+  background-color: white;
   border: 1px solid #949494;
-	border-radius: 15px;
-	box-shadow: 5px 5px 10px #949494;
-	z-index: 1;
+  border-radius: 15px;
+  box-shadow: 5px 5px 10px #949494;
+  z-index: 1;
 }
 
-.plus-btn{
+.plus-btn {
   position: fixed;
   top: 75px;
   left: 50%;
-  cursor: 'pointer';
-  font-family: 'SUITE-Regular';
+  cursor: "pointer";
+  font-family: "SUITE-Regular";
   font-size: 16px;
   font-weight: 900;
-  border: 3px #FED06E solid;
+  border: 3px #fed06e solid;
   border-radius: 10px;
   width: 130px;
   height: 35px;
   background: #ffffff;
   cursor: pointer;
   outline: none;
-  box-shadow: 1px 4px 0 rgb(0,0,0,0.5);
+  box-shadow: 1px 4px 0 rgb(0, 0, 0, 0.5);
   transition-duration: 0.1s;
 }
-.plus-btn:hover{
-  background-color: #FED06E;
+.plus-btn:hover {
+  background-color: #fed06e;
 }
 .plus-btn:active {
-  box-shadow: 1px 1px 0 rgb(0,0,0,0.5);
+  box-shadow: 1px 1px 0 rgb(0, 0, 0, 0.5);
   margin-top: 3px;
 }
 
 /* 두개 버튼 */
-.browser-select-content{
-  display : flex;
-  justify-content:space-around;
+.select-content {
+  display: flex;
+  justify-content: space-around;
   flex-wrap: wrap;
   align-items: center;
   height: 60px;
@@ -48,36 +48,36 @@
   margin: 0;
 }
 
-.browser-select-word{
+.select-word {
   width: 150px;
   height: 10px;
   text-align: center;
   cursor: pointer;
 }
 
-.browser-select-word.cate{
-  color:#949494;
+.select-word.cate {
+  color: #949494;
 }
 
-.browser-select{
+.select {
   width: 140px;
   height: 5px;
   border-radius: 5px;
 }
 
-.browser-select.cate{
+.select.cate {
   background-color: rgb(255, 255, 255);
 }
 
-.browser-select.chatbot{
-  background-color: #FED06E;
+.select.chatbot {
+  background-color: #fed06e;
 }
 
 /* 모달 */
-.filter_btn{
-  position:absolute;
+.filter_btn {
+  position: absolute;
   right: 30px;
-  background: #FFFFFF;
+  background: #ffffff;
   border-radius: 3px;
   font-style: normal;
   font-weight: 700;
@@ -85,45 +85,45 @@
   cursor: pointer;
   border: 2px #414141 solid;
 }
-.filter_btn:hover{
+.filter_btn:hover {
   background-color: #f5f5f5;
 }
-.modal{
+.modal {
   margin: 0 10px 10px 10px;
   padding: 5px;
 }
-.modal-content{
-  display:flex;
+.modal-content {
+  display: flex;
   height: 25px;
   line-height: 22px;
 }
-.modal-area-img{
+.modal-area-img {
   width: 17px;
   margin-right: 5px;
 }
 
-.modal-type-img{
+.modal-type-img {
   width: 17px;
   height: 18px;
   margin-right: 5px;
 }
 
 /* 로그인 안 했을 때 */
-.please-login{
+.please-login {
   width: 350px;
   text-align: center;
 }
-.please-img{
+.please-img {
   opacity: 0.5;
   width: 130px;
   margin-bottom: 20px;
-  position:absolute;
+  position: absolute;
   top: 100px;
   left: 110px;
 }
-.lock-img{
+.lock-img {
   width: 80px;
-  position:absolute;
+  position: absolute;
   top: 150px;
   left: 132px;
 }
