--- a/src/pages/Header/Header.css
+++ b/src/pages/Header/Header.css
@@ -1,29 +1,29 @@
-.header{
-	position: fixed;
-	top:0px;
-	left: 0px;
-	width: 100vw;
-  height:60px;
+.header {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100vw;
+  height: 60px;
   display: flex;
-	z-index: 999;
-	background-color: white;
+  z-index: 999;
+  background-color: white;
 }
 
-.logo{
+.logo {
   height: 50px;
   margin: 5px 15px;
 }
 
-.title{
+.title {
   font-size: 40px;
   font-weight: 1000;
-	color: #FED06E;
-	text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
+  color: #fed06e;
+  text-shadow: -1px 0 #000, 0 1px #000, 1px 0 #000, 0 -1px #000;
   line-height: 60px;
 }
 
-.mypage{
-  position:absolute;
+.go-mypage {
+  position: absolute;
   right: 20px;
   margin: 10px;
   height: 40px;
